<!--
   - Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license.
   - See LICENSE in the project root for license information.
  -->

<!DOCTYPE resources [
    <!ENTITY clientId "b5ff44cc-39e1-4120-881b-3516085ade9a">
    ]>
<resources>

    <string name="app_name">Snippets sample</string>
    <string name="app_name_short">Snippets</string>

    <string name="action_settings">Settings</string>
    <string name="org_acct">Organizational Account</string>
    <string name="sign_in_err">An error signing in has occurred. Check LogCat for details.</string>
    <string name="o365_hint">Sign in with the account provided by your work or school to use with Office 365 or other Microsoft services</string>
    <string name="warning_client_id_redirect_uri_incorrect">The client ID or redirect URI is not valid. Enter a valid client ID and redirect URI in the ServiceConstants.java file and run again</string>
    <string name="title_activity_snippet_detail">SnippetDetailActivity</string>
    <string name="docs"><u>API documentation</u></string>
    <string name="run">Run</string>
    <string name="code_snippet">Code Snippet</string>
    <string name="result">Result</string>
    <string name="status">Status</string>
    <string name="raw_object">Raw Object</string>
    <string name="clippy">copied to clipboard</string>
    <string name="admin">Requires Admin account</string>
    <string name="direct_reports">directReports</string>
    <string name="manager">manager</string>
    <string name="me_responsibility">AboutMe,Responsibilities,Tags</string>
    <string name="member_of">memberOf</string>
    <string name="user_photo">photo</string>
    <string name="mail_body">You can send an email by making a POST request to /me/sendMail.</string>
    <string name="mail_subject">Microsoft Graph snippets</string>
    <string name="fragment_snippet_text_view_description">Description of the Snippet here</string>
    <string name="txt_snippet_name_text">Get all pages</string>
    <string name="list_segment_snippet_name">PAGES</string>
    <string name="sign_in_button">Connect to Microsoft Graph</string>
    <string name="sign_in_description">Welcome to the Microsoft Graph SDK Snippets sample for Android. Let\'s sign in and get started…</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="stoplight_in_progress">In progress</string>
    <string name="stoplight_success">Success</string>
    <string name="stoplight_failure">Failure</string>
    <string name="disconnect_menu_item">Disconnect</string>
    <string name="client_Id">b5ff44cc-39e1-4120-881b-3516085ade9a</string>
    <string name="msalprefix">msalb5ff44cc-39e1-4120-881b-3516085ade9a</string>

</resources>
