<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snippet_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SnippetDetailActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/txt_hyperlink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/edit_text_min_height"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/docs"
                android:textColor="#FF0000FF"
                android:focusable="true"
                android:nextFocusForward="@+id/btn_run"
                android:nextFocusRight="@+id/btn_run"
                android:nextFocusDown="@+id/txt_request_url" />

            <Button
                android:id="@+id/btn_run"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/run"
                android:focusable="true"
                android:nextFocusForward="@+id/txt_request_url"
                android:nextFocusLeft="@+id/txt_hyperlink"
                android:nextFocusDown="@+id/txt_request_url" >
                <requestFocus />
            </Button>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <!-- Spinner with Page, Notebook, or Section chooser-->

        <EditText
            android:id="@+id/txt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:freezesText="true"
            android:text="@string/fragment_snippet_text_view_description" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/code_snippet" />

        <TextView
            android:id="@+id/txt_request_url"
            style="@style/detail_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:focusable="true"
            android:nextFocusForward="@+id/txt_response_body"
            android:nextFocusUp="@+id/btn_run"
            android:nextFocusDown="@+id/txt_response_body" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/result" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/status"
                android:textStyle="bold" />

            <!-- The status color -->
            <ImageView
                android:id="@+id/txt_status_color"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:gravity="center_vertical" />

        </LinearLayout>


        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/raw_object" />

        <TextView
            android:id="@+id/txt_response_body"
            style="@style/detail_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/edit_text_min_height"
            android:freezesText="true"
            android:focusable="true"
            android:nextFocusForward="@+id/txt_hyperlink"
            android:nextFocusUp="@+id/txt_request_url" />

    </LinearLayout>
</ScrollView>
